...
  if (lowercase.contains('university of california') &&
      lowercase.contains('santa barbara')) {
    return 'UCSB';
  }
  if (lowercase.contains('isla vista')) return 'IV';
  if (lowercase.contains('caltrain') && lowercase.contains('san mateo')) {
    return 'San Mateo';
  }
  if (place.length <= 18) return place;
  return place.split(',').first.trim();
}

